--- a/public/formulario.html
+++ b/public/formulario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="shortcut icon" href="../public/assets/icon/favIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/formulario.css">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -15,7 +15,7 @@
 <body>
     <main>
         <nav class="main-menu">
-            <h1>Bem Vindo(a)!</h1>
+            <img class="logo" src="./assets/imgs/ORaioRappa.png" />
             <ul>
                 <li class="nav-item">
                     <b></b>
@@ -57,7 +57,7 @@
         <section class="content">
             <div class="left-content">
                 <div class="conteudoFormulario">
-                    <h1>Formulário | O Rappa</h1><br>
+                    <h1>Formulário - O Rappa</h1><br>
                     <section class="sexo">
                         <h3>Selecione seu sexo:</h3>
                         <input type="radio" id="duvida1a" class="btn1" name="duvida1" value="F">
@@ -76,13 +76,13 @@
                         <input type="radio" id="duvida2c" class="btn3.2" name="duvida2" value="3">
                         <label class="duvida23" for="duvida2c">Lado B Lado A</label><br>
                         <input type="radio" id="duvida2d" class="btn4.2" name="duvida2" value="4">
-                        <label class="duvida24" for="duvida2d"></label>O Silêncio Q Precede O Esporro<br>
+                        <label class="duvida24" for="duvida2d">O Silêncio Q Precede O Esporro</label><br>
                         <input type="radio" id="duvida2e" class="btn5.2" name="duvida2" value="5">
                         <label class="duvida25" for="duvida2e">7 Vezes</label><br>
                         <input type="radio" id="duvida2f" class="btn6.2" name="duvida2" value="6">
                         <label class="duvida26" for="duvida2e">Nunca Tem Fim...</label><br>
                         <input type="radio" id="duvida2f" class="btn6.2" name="duvida2" value="7">
-                        <label class="duvida26" for="duvida2e">Não Possuo</label><br><br>/section>
+                        <label class="duvida26" for="duvida2e">Não Possuo</label><br><br>
 
                             <!-- Como o gráfico de vot -->
                         <section class="comoConheceu">
