Formulário semi-finalizado

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,7 +12,7 @@
     <title>O Rappa | Dashboard</title>
 </head>
 
-<body onload="buscarSexo(), listar()">
+<body>
     <main>
         <nav class="main-menu">
             <img class="logo" src="./assets/imgs/ORaioRappa.png" />
