--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,7 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/usuario.css" />
-  <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
