--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>O Rappa | Página Inicial</title>
 
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Convergence&family=Lato:wght@300;400;700;900&family=Mukta:wght@300;400;600;700;800&family=Noto+Sans:wght@400;700&display=swap"
