--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
 
     <!-- <link rel="stylesheet" href="./css/estilo.css"> -->
     <link rel="stylesheet" href="./css/usuario.css">
-    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
