--- a/public/quiz.html
+++ b/public/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/quiz.css">
-    <link rel="shortcut icon" href="./assets/icones/favIcon.ico">
+    <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
     <script src="./js/sessao.js"></script>
     <title>Quiz | O Rappa</title>
 </head>
